# pi-frontend

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  package-lock.json
.claude/: launch.json  settings.json
.pi/extensions/: README.md  mode-system-prompt.ts
docs/: opencode-api.md  subagents.md
pi-serena/: COOKBOOK.md  README.md  serena-daemon.sh  serena.ext.ts  serena@.service
server/: Cargo.toml
server/pi-login/: login-helper.mjs
server/src/: main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: AgentsDialog.vue  App.vue  ChatHeader.vue  CoderMenu.vue  ColorProfilePopover.vue  CommandPalette.vue  Composer.vue  ConnectDialog.vue  D20Die.vue  ExtensionUIDialog.vue  GitBranchSelect.vue  MessageList.vue  MessageRail.vue  MessageView.vue  RenameDialog.vue  Sidebar.vue  SshPopover.vue  SubagentView.vue  UsagePopover.vue  auth.js  git.js  main.js  markdown.js  pageTitle.js  pi.js  projects.js  renameDialog.js  ssh.js  style.css  theme.js
web/src/components/chat/: ChatHeader.vue  Composer.vue  D20Die.vue  FindBar.vue  GitBranchSelect.vue  MessageList.vue  MessageRail.vue  MessageView.vue  RtkToggle.vue  SubagentView.vue
web/src/components/dialogs/: AgentsDialog.vue  CommandPalette.vue  ConfirmDialog.vue  ConnectDialog.vue  ExtensionUIDialog.vue  RenameDialog.vue
web/src/lib/: diff.js  markdown.js  pageTitle.js
web/src/stores/: agents.js  auth.js  coder.js  confirm.js  filesearch.js  git.js  modelfilter.js  opencode.js  pi.js  projects.js  pty.js  rtk.js  search.js  serena.js  ssh.js  theme.js
(+7 files in other folders)
