[package]
name = "pi-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
